--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,38 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "9f09e664",
+   "execution_count": 70,
+   "id": "98b8535d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse(driver,lists,target_frequency):\n",
-    "    l=lists \n",
+    "def parse(driver,l,genes,target_frequency):\n",
     "    results = []\n",
     "    count = [0]*len(l)\n",
-    "    \n",
+    "\n",
+    "#claims = driver.find_elements_by_class_name(\"claims\")\n",
+    "\n",
+    "#dog = \"\"\n",
+    "\n",
+    "#for x in claims:\n",
+    "#    dog = dog + x.text + \"\\n\"\n",
+    "\n",
+    "#print(dog) \n",
+    "#claim = dog\n",
+    "\n",
     "    #TITLE\n",
-    "    titleStr = driver.find_element_by_id(\"title\").text\n",
-    "\n",
+    "    #titleStr = driver.find_element_by_id(\"title\").text\n",
+    "    titleStr = driver.title.split(\" - \")[1].strip()\n",
+    "    \n",
     "    #print(titleStr)\n",
-    "\n",
+    "    ## SWITCH CASE\n",
     "    for x in l:\n",
     "        for y in x:\n",
-    "            if y in titleStr:\n",
-    "                count[l.index(x)]+=titleStr.count(y)\n",
-    "                results.append(x[len(x)-1])\n",
-    "                break\n",
+    "            #y=str(y).lower()\n",
+    "            if len(str(y))>=3:\n",
+    "                #print(\"entered\")\n",
+    "                if \" \"+str(y)+\" \" in titleStr:\n",
+    "                    count[l.index(x)]+=titleStr.count(\" \"+str(y)+\" \")\n",
+    "                    results.append(x[0])\n",
+    "                    break\n",
+    "                if  \" \" + str(y) + \".\" in titleStr:\n",
+    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \".\")\n",
+    "                    results.append(x[0])\n",
+    "                    break\n",
+    "                if  \" \" + str(y) + \",\" in titleStr:\n",
+    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \",\")\n",
+    "                    results.append(x[0])\n",
+    "                    break\n",
+    "                if  \" \" + str(y) + \"'\" in titleStr:\n",
+    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \"'\")\n",
+    "                    results.append(x[0])\n",
+    "                    break\n",
+    "                if  \" \" + str(y) + \"/\" in titleStr:\n",
+    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \"/\")\n",
+    "                    results.append(x[0])\n",
+    "                    break\n",
+    "                if  \"/\" + str(y) + \" \" in titleStr:\n",
+    "                    count[l.index(x)]+=titleStr.count(\"/\" + str(y) + \" \")\n",
+    "                    results.append(x[0])\n",
+    "                    break\n",
+    "                if  \" \" + str(y) + \":\" in titleStr:\n",
+    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \":\")\n",
+    "                    results.append(x[0])\n",
+    "                    break\n",
     "        \n",
     "        \n",
     "    #ABSTRACT\n",
+    "    #abstractStr = driver.find_element_by_id(\"abstract\").text\n",
     "    abstractStr = driver.find_element_by_id(\"abstract\").text\n",
     "\n",
+    "    if not abstractStr:\n",
+    "        abstractStr = driver.find_element_by_tag_name(\"patent-text\").text\n",
     "    #print(abstractStr)\n",
     "\n",
     "    for x in l:\n",
+    "        #y=str(y).lower()\n",
     "        for y in x:\n",
-    "            if y in abstractStr:\n",
-    "                count[l.index(x)]+=abstractStr.count(y)\n",
+    "            y=str(y).lower()\n",
+    "            if len(str(y))>=3:\n",
+    "                #print(\"entered\")\n",
+    "                if \" \"+str(y)+\" \" in abstractStr:\n",
+    "                    count[l.index(x)]+=abstractStr.count(\" \"+str(y)+\" \")\n",
+    "                elif  \" \" + str(y) + \".\" in abstractStr:\n",
+    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \".\")\n",
+    "                elif  \" \" + str(y) + \",\" in abstractStr:\n",
+    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \",\")\n",
+    "                elif  \" \" + str(y) + \"'\" in abstractStr:\n",
+    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \"'\")\n",
+    "                elif  \" \" + str(y) + \"/\" in abstractStr:\n",
+    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \"/\")\n",
+    "                elif  \"/\" + str(y) + \" \" in abstractStr:\n",
+    "                    count[l.index(x)]+=abstractStr.count(\"/\" + str(y) + \" \")\n",
+    "                elif  \" \" + str(y) + \":\" in abstractStr:\n",
+    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \":\")\n",
     "\n",
     "        \n",
     "        \n",
@@ -41,9 +97,12 @@
     "    claims = driver.find_elements_by_class_name(\"claims\")\n",
     "\n",
     "    claimList=[]\n",
-    "\n",
+    "    temp = 0\n",
     "    for x in claims:\n",
+    "        if temp==10:\n",
+    "            break\n",
     "        claimList.append(x.text+\"\\n\")\n",
+    "        temp+=1\n",
     "    claimStr = \"\"\n",
     "    for x in claimList:\n",
     "        claimStr+=x\n",
@@ -52,9 +111,23 @@
     "\n",
     "    for x in l:\n",
     "        for y in x:\n",
-    "            if y in claimStr:\n",
-    "                count[l.index(x)]+=claimStr.count(y)\n",
-    "\n",
+    "            #y=str(y).lower()    \n",
+    "            if len(str(y))>=3:\n",
+    "                #print(\"entered\")\n",
+    "                if \" \"+str(y)+\" \" in claimStr:\n",
+    "                    count[l.index(x)]+=claimStr.count(\" \"+str(y)+\" \")\n",
+    "                elif  \" \" + str(y) + \".\" in claimStr:\n",
+    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \".\")\n",
+    "                elif  \" \" + str(y) + \",\" in claimStr:\n",
+    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \",\")\n",
+    "                elif  \" \" + str(y) + \"'\" in claimStr:\n",
+    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \"'\")\n",
+    "                elif  \" \" + str(y) + \"/\" in claimStr:\n",
+    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \"/\")\n",
+    "                elif  \"/\" + str(y) + \" \" in claimStr:\n",
+    "                    count[l.index(x)]+=claimStr.count(\"/\" + str(y) + \" \")\n",
+    "                elif  \" \" + str(y) + \":\" in claimStr:\n",
+    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \":\")\n",
     "                \n",
     "    #ADD TO RESULTS\n",
     "    #temp = count\n",
@@ -70,10 +143,13 @@
     "    #    if count[l.index(y)]>=3 and l[l.index(y)][len(l[l.index(y)])-1] not in results:\n",
     "    #        results.append(y[len(y)-1])\n",
     "    \n",
+    "    \n",
     "    r = sorted(zip(count, l), reverse=True)[:3]\n",
     "    for x in r:\n",
     "        if x[0]>=target_frequency:\n",
-    "            results.append(x[1][len(x[1])-1])\n",
+    "            results.append(x[1][0])\n",
+    "    print(r)\n",
+    "    #print(r)\n",
     "    \n",
     "    #c = 0\n",
     "    #if len(results)==0:\n",
@@ -91,16 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "181a3d4d",
+   "execution_count": 71,
+   "id": "173e397b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[(6, ['ZNF600', 'Zinc Finger Protein 600', 'KR-ZNF1', 'Zinc Finger Protein KR-ZNF1', 'DKFZp686F06123', 'ZNF600']), (6, ['ZMAT3', 'Zinc Finger Matrin-Type 3', 'PAG608', 'WIG1', 'Zinc Finger Matrin-Type Protein 3', 'P53-Activated Gene 608 Protein', 'WIG-1', 'P53 Target Zinc Finger Protein', 'Zinc Finger Protein WIG-1', 'Zinc Finger Protein WIG1', 'WIG-1/PAG608 Protein', 'MGC10613', 'FLJ12296', 'ZMAT3']), (6, ['WNT16', 'Wnt Family Member 16', 'Wingless-Type MMTV Integration Site Family, Member 16', 'Protein Wnt-16', 'Wingless-Type MMTV Integration Site Family Member 16b', 'WNT16'])]\n",
       "Genes found\n",
-      "TP53\n"
+      "ZNF600\n",
+      "ZMAT3\n",
+      "WNT16\n"
      ]
     }
    ],
@@ -108,16 +187,19 @@
     "from selenium.webdriver.firefox.firefox_binary import FirefoxBinary\n",
     "from selenium import webdriver\n",
     "import time\n",
+    "import xlrd\n",
     "driver = webdriver.Firefox(executable_path=r'C:\\Users\\jjohn\\Desktop\\Scraping\\geckodriver-v0.29.1-win64\\geckodriver.exe') #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
     "\n",
-    "driver.get(\"https://patents.google.com/patent/KR20180010229A/en?q=tp53\")\n",
+    "driver.get(\"https://patents.google.com/patent/US20080234138A1/en?q=tp53\")\n",
     "\n",
     "time.sleep(5)\n",
     "\n",
     "#GENE ARRAY\n",
-    "l = [['Tumor Protein P53', 'P53', 'Cellular Tumor Antigen P53', 'Phosphoprotein P53', 'Antigen NY-CO-13', 'LFS1', 'Transformation-Related Protein 53', 'Mutant Tumor Protein 53', 'Li-Fraumeni Syndrome', 'P53 Tumor Suppressor', 'Tumor Suppressor P53', 'Tumor Supressor P53', 'Tumor Protein 53', 'BMFS5', 'TRP53', 'BCC7', 'TP53'], ['Tumor Necrosis Factor', 'TNF-Alpha', 'TNFSF2', 'Tumor Necrosis Factor Ligand Superfamily Member 2', 'TNF-A', 'TNFA', 'DIF', 'Tumor Necrosis Factor (TNF Superfamily, Member', 'Tumor Necrosis Factor Ligand 1F', 'Tumor Necrosis Factor-Alpha', 'TNF Superfamily, Member', 'TNF, Macrophage-Derived', 'TNF, Monocyte-Derived', 'APC1 Protein', 'Cachectin', 'TNLG1F', 'TNF'], ['Epidermal Growth Factor Receptor', 'ERBB1', 'Receptor Tyrosine-Protein Kinase ErbB-1', 'Erb-B2 Receptor Tyrosine Kinase 1', 'Proto-Oncogene C-ErbB-1', 'EC 2.7.10.1', 'ERBB', 'ERRP', 'HER1', 'Epidermal Growth Factor Receptor (Avian Erythroblastic Leukemia Viral (V-Erb-B) Oncogene Homolog)', 'Erythroblastic Leukemia Viral (V-Erb-B) Oncogene Homolog (Avian)', 'Avian Erythroblastic Leukemia Viral (V-Erb-B) Oncogene Homolog', 'Epidermal Growth Factor Receptor Tyrosine Kinase Domain', 'Cell Proliferation-Inducing Protein 61', 'Cell Growth Inhibiting Protein 40', 'EC 2.7.10', 'NISBD2', 'PIG61', 'MENA', 'EGFR'], ['Vascular Endothelial Growth Factor A', 'VPF', 'Vascular Permeability Factor', 'VEGF-A', 'VEGF', 'Vascular Endothelial Growth Factor A121', 'Vascular Endothelial Growth Factor A165', 'Vascular Endothelial Growth Factor', 'MVCD1', 'VEGFA'], ['Apolipoprotein E', 'Alzheimer Disease', 'Apolipoprotein E3', 'LDLCQ5', 'APO-E', 'ApoE4', 'Apo-E', 'APOE', 'AD2', 'LPG'], ['Interleukin 6', 'IL-6', 'B-Cell Stimulatory Factor 2', 'CTL Differentiation Factor', 'Hybridoma Growth Factor', 'Interferon Beta-2', 'Interleukin-6', 'IFN-Beta-2', 'BSF-2', 'IFNB2', 'BSF2', 'CDF', 'HGF', 'HSF', 'Interleukin 6 (Interferon, Beta', 'B-Cell Differentiation Factor', 'Interferon, Beta', 'Interleukin BSF-2', 'IL6'], ['Transforming Growth Factor Beta Induced', 'BIGH3', 'Transforming Growth Factor-Beta-Induced Protein Ig-H3', 'Transforming Growth Factor, Beta-Induced, 68kD', 'RGD-Containing Collagen-Associated Protein', 'Kerato-Epithelin', 'Beta Ig-H3', 'RGD-CAP', 'CDGG1', 'CDB1', 'Transforming Growth Factor, Beta-Induced, 68kDa', 'Transforming Growth Factor Beta-Induced 68kDa', 'Betaig-H3', 'TGFBI', 'CDG2', 'CSD1', 'CSD2', 'CSD3', 'EBMD', 'LCD1', 'CSD'], ['Methylenetetrahydrofolate Reductase', '5,10-Methylenetetrahydrofolate Reductase (NADPH)', 'Methylenetetrahydrofolate Reductase (NAD(P)H)', 'EC 1.5.1.20', 'MTHFR'], ['Estrogen Receptor 1', 'Nuclear Receptor Subfamily 3 Group A Member 1', 'ER-Alpha', 'NR3A1', 'Oestrogen Receptor Alpha', 'Estradiol Receptor', 'E2 Receptor Alpha', 'Estrogen Receptor', 'ESR', 'Era', 'ER', 'Estrogen Receptor Alpha E1-N2-E2-1-2', 'Estrogen Receptor Alpha E1-E2-1-2', 'Estrogen Nuclear Receptor Alpha', 'Estrogen Receptor Alpha', 'ESTRR', 'ESRA', 'ESR1'], ['AKT Serine/Threonine Kinase 1', 'PKB', 'RAC', 'V-Akt Murine Thymoma Viral Oncogene Homolog 1', 'RAC-Alpha Serine/Threonine-Protein Kinase', 'Protein Kinase B Alpha', 'Proto-Oncogene C-Akt', 'Protein Kinase B', 'RAC-PK-Alpha', 'EC 2.7.11.1', 'PKB Alpha', 'PRKBA', 'AKT', 'V-Akt Murine Thymoma Viral Oncogene-Like Protein 1', 'Serine-Threonine Protein Kinase', 'Rac Protein Kinase Alpha', 'PKB-ALPHA', 'RAC-ALPHA', 'RAC-Alpha', 'EC 2.7.11', 'AKT1m', 'AKT1']]\n",
+    "l = newaliasesfromfile()\n",
+    "gene = genes()\n",
+    "#print(l)\n",
     "\n",
-    "list = parse(driver,l,300)\n",
+    "list = parse(driver,l,gene,1)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
@@ -128,8 +210,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "6fb999d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlrd\n",
+    "def aliasesfromfile():\n",
+    "    wb = xlrd.open_workbook  # read all genes from excel sheet\n",
+    "    ws = wb.sheet_by_index(0)\n",
+    "    x = len(ws.col_values(0))\n",
+    "\n",
+    "    genelist = ws.col_values(0)\n",
+    "    genelist.pop(0)  # genelist = list of all target names\n",
+    "    aliases = []\n",
+    "    for dog in range(x):\n",
+    "        x = ws.row_values(dog)\n",
+    "        x[:] = [y for y in x if y]\n",
+    "        x = x[1:]\n",
+    "        x = str(x)\n",
+    "        aliases.append(x)\n",
+    "    return aliases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "788a1185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "def newaliasesfromfile():\n",
+    "    pepega = pd.read_excel(\"Gene_Aliases_All.xlsx\")\n",
+    "    #print(pepega[\"Unnamed: 0\"].values[0])\n",
+    "    #print(pepega.values[0])\n",
+    "    poogers = []\n",
+    "    for dog in range(len(pepega.values)):\n",
+    "        peepo = []\n",
+    "        for cow in range(len(pepega.values[dog])-1):\n",
+    "            if pd.isnull(pepega.values[dog][cow]):\n",
+    "                break\n",
+    "            peepo.append(pepega.values[dog][cow])\n",
+    "        poogers.append(peepo)\n",
+    "    return poogers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "aafc3b90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "def genes():\n",
+    "    pepega = pd.read_excel(\"Gene_Aliases_All.xlsx\")\n",
+    "    #print(pepega[\"Unnamed: 0\"].values[0])\n",
+    "    #print(pepega.values[0])\n",
+    "    return pepega[\"Unnamed: 0\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f2ece98e",
+   "id": "2f4b26b7",
    "metadata": {},
    "outputs": [],
    "source": []
