--- a/Parsers/Parser.ipynb
+++ b/Parsers/Parser.ipynb
@@ -2,172 +2,118 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 155,
    "id": "98b8535d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse(driver,l,genes,target_frequency):\n",
+    "### SWITCHED GENES AND ALIAS_LIST PARAMETERS\n",
+    "\n",
+    "def parse(driver,genes,alias_list,target_frequency):\n",
     "    results = []\n",
-    "    count = [0]*len(l)\n",
-    "\n",
-    "#claims = driver.find_elements_by_class_name(\"claims\")\n",
-    "\n",
-    "#dog = \"\"\n",
-    "\n",
-    "#for x in claims:\n",
-    "#    dog = dog + x.text + \"\\n\"\n",
-    "\n",
-    "#print(dog) \n",
-    "#claim = dog\n",
+    "    count = [0]*len(alias_list)\n",
     "\n",
     "    #TITLE\n",
     "    #titleStr = driver.find_element_by_id(\"title\").text\n",
     "    titleStr = driver.title.split(\" - \")[1].strip()\n",
     "    \n",
     "    #print(titleStr)\n",
-    "    ## SWITCH CASE\n",
-    "    for x in l:\n",
-    "        for y in x:\n",
-    "            #y=str(y).lower()\n",
-    "            if len(str(y))>=3:\n",
+    "    for aliases in alias_list:\n",
+    "        for cur in aliases:\n",
+    "            if len(str(cur))>=3:\n",
     "                #print(\"entered\")\n",
-    "                if \" \"+str(y)+\" \" in titleStr:\n",
-    "                    count[l.index(x)]+=titleStr.count(\" \"+str(y)+\" \")\n",
-    "                    results.append(x[0])\n",
-    "                    break\n",
-    "                if  \" \" + str(y) + \".\" in titleStr:\n",
-    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \".\")\n",
-    "                    results.append(x[0])\n",
-    "                    break\n",
-    "                if  \" \" + str(y) + \",\" in titleStr:\n",
-    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \",\")\n",
-    "                    results.append(x[0])\n",
-    "                    break\n",
-    "                if  \" \" + str(y) + \"'\" in titleStr:\n",
-    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \"'\")\n",
-    "                    results.append(x[0])\n",
-    "                    break\n",
-    "                if  \" \" + str(y) + \"/\" in titleStr:\n",
-    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \"/\")\n",
-    "                    results.append(x[0])\n",
-    "                    break\n",
-    "                if  \"/\" + str(y) + \" \" in titleStr:\n",
-    "                    count[l.index(x)]+=titleStr.count(\"/\" + str(y) + \" \")\n",
-    "                    results.append(x[0])\n",
-    "                    break\n",
-    "                if  \" \" + str(y) + \":\" in titleStr:\n",
-    "                    count[l.index(x)]+=titleStr.count(\" \" + str(y) + \":\")\n",
-    "                    results.append(x[0])\n",
-    "                    break\n",
+    "                if str(cur) in titleStr:\n",
+    "                    countTitle=(titleStr.count(\" \"+str(cur)+\" \")+titleStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                    titleStr.count(\" \" + str(cur) + \",\")+titleStr.count(\" \" + str(cur) + \"'\")+\\\n",
+    "                    titleStr.count(\" \" + str(cur) + \"/\")+titleStr.count(\"/\" + str(cur) + \" \")+\\\n",
+    "                    titleStr.count(\" \" + str(cur) + \":\")+titleStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                    if countTitle!=0:\n",
+    "                        results.append(aliases[0])\n",
+    "                        count[alias_list.index(aliases)]+=countTitle\n",
+    "                        break\n",
     "        \n",
     "        \n",
     "    #ABSTRACT\n",
-    "    #abstractStr = driver.find_element_by_id(\"abstract\").text\n",
     "    abstractStr = driver.find_element_by_id(\"abstract\").text\n",
     "\n",
     "    if not abstractStr:\n",
     "        abstractStr = driver.find_element_by_tag_name(\"patent-text\").text\n",
     "    #print(abstractStr)\n",
     "\n",
-    "    for x in l:\n",
-    "        #y=str(y).lower()\n",
-    "        for y in x:\n",
-    "            y=str(y).lower()\n",
-    "            if len(str(y))>=3:\n",
+    "    ## aliases - list of aliases for current gene\n",
+    "    ## cur - the current alias that is being looked for in the text\n",
+    "    for aliases in alias_list:\n",
+    "        for cur in aliases:\n",
+    "            #y=str(y).lower()\n",
+    "            if len(str(cur))>=3:\n",
     "                #print(\"entered\")\n",
-    "                if \" \"+str(y)+\" \" in abstractStr:\n",
-    "                    count[l.index(x)]+=abstractStr.count(\" \"+str(y)+\" \")\n",
-    "                elif  \" \" + str(y) + \".\" in abstractStr:\n",
-    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \".\")\n",
-    "                elif  \" \" + str(y) + \",\" in abstractStr:\n",
-    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \",\")\n",
-    "                elif  \" \" + str(y) + \"'\" in abstractStr:\n",
-    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \"'\")\n",
-    "                elif  \" \" + str(y) + \"/\" in abstractStr:\n",
-    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \"/\")\n",
-    "                elif  \"/\" + str(y) + \" \" in abstractStr:\n",
-    "                    count[l.index(x)]+=abstractStr.count(\"/\" + str(y) + \" \")\n",
-    "                elif  \" \" + str(y) + \":\" in abstractStr:\n",
-    "                    count[l.index(x)]+=abstractStr.count(\" \" + str(y) + \":\")\n",
+    "                if str(cur) in abstractStr:\n",
+    "                    countAbstract = 3*(abstractStr.count(\" \"+str(cur)+\" \")+abstractStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                    abstractStr.count(\" \" + str(cur) + \",\")+abstractStr.count(\" \" + str(cur) + \"'\")+\\\n",
+    "                    abstractStr.count(\" \" + str(cur) + \"/\")+abstractStr.count(\"/\" + str(cur) + \" \")+\\\n",
+    "                    abstractStr.count(\" \" + str(cur) + \":\")+abstractStr.count(\"-\" + str(cur) + \" \"))\n",
+    "                    count[alias_list.index(aliases)]+=countAbstract\n",
+    "                    #print(str(temp) + \" gene: \"+ str(y))\n",
     "\n",
     "        \n",
     "        \n",
     "    #CLAIMS\n",
-    "    claims = driver.find_elements_by_class_name(\"claims\")\n",
-    "\n",
     "    claimList=[]\n",
-    "    temp = 0\n",
+    "    \n",
+    "    claims = driver.find_elements_by_class_name(\"claim-text\")\n",
+    "    num_claims = 0\n",
     "    for x in claims:\n",
-    "        if temp==10:\n",
+    "        if num_claims>=10:\n",
     "            break\n",
     "        claimList.append(x.text+\"\\n\")\n",
-    "        temp+=1\n",
+    "        num_claims+=1\n",
+    "        \n",
+    "    #print(claimList)    \n",
     "    claimStr = \"\"\n",
     "    for x in claimList:\n",
     "        claimStr+=x\n",
     "\n",
     "    #print(claimStr)\n",
-    "\n",
-    "    for x in l:\n",
-    "        for y in x:\n",
-    "            #y=str(y).lower()    \n",
-    "            if len(str(y))>=3:\n",
+    "    for aliases in alias_list:\n",
+    "        for cur in aliases:  \n",
+    "            if len(str(cur))>=3:\n",
     "                #print(\"entered\")\n",
-    "                if \" \"+str(y)+\" \" in claimStr:\n",
-    "                    count[l.index(x)]+=claimStr.count(\" \"+str(y)+\" \")\n",
-    "                elif  \" \" + str(y) + \".\" in claimStr:\n",
-    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \".\")\n",
-    "                elif  \" \" + str(y) + \",\" in claimStr:\n",
-    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \",\")\n",
-    "                elif  \" \" + str(y) + \"'\" in claimStr:\n",
-    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \"'\")\n",
-    "                elif  \" \" + str(y) + \"/\" in claimStr:\n",
-    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \"/\")\n",
-    "                elif  \"/\" + str(y) + \" \" in claimStr:\n",
-    "                    count[l.index(x)]+=claimStr.count(\"/\" + str(y) + \" \")\n",
-    "                elif  \" \" + str(y) + \":\" in claimStr:\n",
-    "                    count[l.index(x)]+=claimStr.count(\" \" + str(y) + \":\")\n",
-    "                \n",
-    "    #ADD TO RESULTS\n",
-    "    #temp = count\n",
-    "    #c = 0\n",
-    "    #while c<3:\n",
-    "    #    t = l[l.index(max(count))][len(l[l.index(max(count))])-1]\n",
-    "    #    if t not in results:\n",
-    "    #        results.append(t)\n",
-    "    #        count.remove(max(count))\n",
-    "    #    c+=1\n",
-    "        \n",
-    "    #for y in l:\n",
-    "    #    if count[l.index(y)]>=3 and l[l.index(y)][len(l[l.index(y)])-1] not in results:\n",
-    "    #        results.append(y[len(y)-1])\n",
+    "                if str(cur) in claimStr:\n",
+    "                    count[alias_list.index(aliases)]+=claimStr.count(\" \"+str(cur)+\" \")+claimStr.count(\" \" + str(cur) + \".\")+\\\n",
+    "                    claimStr.count(\" \" + str(cur) + \",\")+claimStr.count(\" \" + str(cur) + \"'\")+\\\n",
+    "                    claimStr.count(\" \" + str(cur) + \"/\")+claimStr.count(\"/\" + str(cur) + \" \")+\\\n",
+    "                    claimStr.count(\" \" + str(cur) + \":\")+claimStr.count(\"-\" + str(cur) + \" \")\n",
+    "\n",
     "    \n",
+    "    sort = sorted(zip(count, genes), reverse=True)\n",
+    "    count = 0\n",
+    "    r = []\n",
+    "    print_stuff=[]\n",
+    "    for x in sort:\n",
+    "        if count>=3:\n",
+    "            break\n",
+    "        elif x[1] not in results:\n",
+    "            r.append(x)\n",
+    "            print_stuff.append(x)\n",
+    "            count+=1\n",
+    "        elif x[1] in results:\n",
+    "            print_stuff.append(x)\n",
     "    \n",
-    "    r = sorted(zip(count, l), reverse=True)[:3]\n",
     "    for x in r:\n",
     "        if x[0]>=target_frequency:\n",
-    "            results.append(x[1][0])\n",
-    "    print(r)\n",
-    "    #print(r)\n",
+    "            results.append(x[1])\n",
+    "        elif x[0]>0 and len(results)==0:\n",
+    "            results.append(x[1])\n",
+    "            break\n",
+    "\n",
+    "    print(print_stuff)\n",
     "    \n",
-    "    #c = 0\n",
-    "    #if len(results)==0:\n",
-    "    #    for y in l:\n",
-    "    #        if count[l.index(y)]!=0 and c<2:\n",
-    "    #            results.append(y[len(y)-1])\n",
-    "    #            count+=1\n",
-    "    \n",
-    "    #for x in count:\n",
-    "    #    print(\"Target: \"+l[count.index(x)][len(l[count.index(x)])-1])\n",
-    "    #    print(\"#s of times seen: \"+str(x)+\"\\n\")\n",
-    "    #list = list[:3]\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 157,
    "id": "173e397b",
    "metadata": {},
    "outputs": [
@@ -175,11 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(6, ['ZNF600', 'Zinc Finger Protein 600', 'KR-ZNF1', 'Zinc Finger Protein KR-ZNF1', 'DKFZp686F06123', 'ZNF600']), (6, ['ZMAT3', 'Zinc Finger Matrin-Type 3', 'PAG608', 'WIG1', 'Zinc Finger Matrin-Type Protein 3', 'P53-Activated Gene 608 Protein', 'WIG-1', 'P53 Target Zinc Finger Protein', 'Zinc Finger Protein WIG-1', 'Zinc Finger Protein WIG1', 'WIG-1/PAG608 Protein', 'MGC10613', 'FLJ12296', 'ZMAT3']), (6, ['WNT16', 'Wnt Family Member 16', 'Wingless-Type MMTV Integration Site Family, Member 16', 'Protein Wnt-16', 'Wingless-Type MMTV Integration Site Family Member 16b', 'WNT16'])]\n",
-      "Genes found\n",
-      "ZNF600\n",
-      "ZMAT3\n",
-      "WNT16\n"
+      "[(0, 'ZZZ3'), (0, 'ZZEF1'), (0, 'ZYX')]\n",
+      "Genes found\n"
      ]
     }
    ],
@@ -190,7 +133,7 @@
     "import xlrd\n",
     "driver = webdriver.Firefox(executable_path=r'C:\\Users\\jjohn\\Desktop\\Scraping\\geckodriver-v0.29.1-win64\\geckodriver.exe') #make sure this exists somewhere in a local, varies from user to user, and copy the path here\n",
     "\n",
-    "driver.get(\"https://patents.google.com/patent/US20080234138A1/en?q=tp53\")\n",
+    "driver.get(\"https://patents.google.com/patent/US20180010134A1/en?q=tp53&oq=tp53\")\n",
     "\n",
     "time.sleep(5)\n",
     "\n",
@@ -199,7 +142,7 @@
     "gene = genes()\n",
     "#print(l)\n",
     "\n",
-    "list = parse(driver,l,gene,1)\n",
+    "list = parse(driver,gene,l,3)\n",
     "\n",
     "print(\"Genes found\")\n",
     "for x in list:\n",
@@ -210,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 94,
    "id": "6fb999d0",
    "metadata": {},
    "outputs": [],
@@ -236,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "788a1185",
+   "id": "01bcf523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "aafc3b90",
+   "id": "abaeff21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4b26b7",
+   "id": "9c85368c",
    "metadata": {},
    "outputs": [],
    "source": []
